# srs-librtmp-cmake

./: CMakeLists.txt  Makefile  README.md  srs_auto_headers.hpp.in  srs_win32def.h  srs_win32def2.h
core/: srs_core.hpp
kernel/: srs_kernel_codec.cpp  srs_kernel_file.cpp  srs_kernel_file.hpp  srs_kernel_flv.cpp  srs_kernel_flv.hpp  srs_kernel_log.cpp  srs_kernel_stream.cpp  srs_kernel_stream.hpp  srs_kernel_ts.hpp  srs_kernel_utility.cpp  srs_kernel_utility.hpp
libs/: srs_lib_bandwidth.cpp  srs_lib_bandwidth.hpp  srs_lib_simple_socket.cpp  srs_librtmp.cpp  srs_librtmp.hpp
objs/: Makefile  _srs_build_summary.sh  srs_auto_headers.hpp
protocol/: srs_raw_avc.hpp  srs_rtmp_handshake.cpp  srs_rtmp_io.hpp  srs_rtmp_stack.cpp  srs_rtmp_utility.hpp
src/libs/: srs_librtmp.hpp
